Margin and letter spacing for issue title on the archive page

--- a/resources/less/objects/issue_summary.less
+++ b/resources/less/objects/issue_summary.less
@@ -14,7 +14,7 @@
 	
 	& .series {
 		font-size: 80%;
-		margin-bottom: 1.5rem;
+		letter-spacing: -0.025em;
 	}
 }
 
